# serializer version: 1
# name: test_term_to_latex[church_2-at][church_2]
  '\\lambda x.\\, \\lambda y.\\, x\\, (x\\, y)'
# ---
# name: test_term_to_latex[identity-at][identity]
  '\\lambda x.\\, x'
# ---
# name: test_term_to_latex[kestrel-at][kestrel]
  '\\lambda x.\\, \\lambda y.\\, x'
# ---
# name: test_term_to_latex[successor-at][successor]
  '\\lambda x.\\, \\lambda y.\\, \\lambda z.\\, y\\, (x\\, y\\, z)'
# ---
